# ocr2md

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ocr2md/: __init__.py  config.docker.yaml  config.py  config.yaml  ocr_pipeline.py
ocr2md/backend/: __init__.py  base.py  glm_ocr_backend.py
ocr2md/cli/: __init__.py  run_layout_only.py  run_local.py  run_web.py
ocr2md/dataloader/: page_loader.py
ocr2md/layout/: __init__.py  base.py  layout_detector.py
ocr2md/parser_result/: base.py  pipeline_result.py
ocr2md/postprocess/: base_post_processor.py  result_formatter.py
ocr2md/utils/: image_utils.py  layout_postprocess_utils.py  lock_utils.py  logging.py  markdown_utils.py  model_dir_utils.py
ocr2md/web/: app.py  errors.py  schemas.py
ocr2md/web/routers/: __init__.py  health.py  models.py  ocr.py  tasks.py
ocr2md/web/services/: __init__.py  model_manager.py  ocr_queue.py  ocr_runner.py  result_mapper.py
ocr2md/web/stores/: __init__.py  task_store.py
spec/: PRD.md  TASK.md  template.js
tests/: test_backend_device_selection.py  test_markdown_utils.py  test_model_dir_utils.py
tests/web/: test_api.py  test_model_manager.py  test_ocr_queue.py  test_ocr_runner.py  test_result_mapper.py  test_task_store.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
